--- a/servicio/style/merchandising_css.css
+++ b/servicio/style/merchandising_css.css
@@ -76,21 +76,22 @@ header {
 
 /*------------- MERCHANDINSING -------------*/
 .merchandinsing {
-    background-color: rgb(5, 5, 5);
-    height: 600px;
+    background-color: rgb(0, 0, 0);
     width: 100%;
+    height: 670px;
 }
 .merchandinsing-img {
-    height: 600px;
     width: 100%;
+    height: 670px;
     position: absolute;
     background: url(../../img/servicios-img/servicio-6.png) no-repeat;
     background-size: cover;
+    background-position: center;
     background-attachment: fixed;
     opacity: .3;
 }
 .mer-div {
-    height: 600px;
+    height: 670px;
     position: relative;
 }
 .mer-title {
@@ -140,7 +141,7 @@ header {
     gap: 20px;
 }
 .gapdi-2 {
-    gap: 2rem;
+    gap: 2.7rem;
 }
 .grid-column-diseño {
     grid-template-columns: repeat(3, auto);
@@ -162,8 +163,8 @@ header {
     border-radius: 15px;
 }
 .dis-img > img {
-    width: 270px;
-    height: 360px;
+    width: 300px;
+    height: 390px;
     border-radius: 15px;
     transition: all .3s ease-in-out;
 }
