--- a/servicio/style/merchandising_css.css
+++ b/servicio/style/merchandising_css.css
@@ -315,6 +315,65 @@ footer {
     }
 } 
 @media (850px < width < 1012px) {
+     /*-------------- HEADER --------------*/ 
+     header {
+        top: 0px;
+        position: sticky;
+        z-index: 1000;
+    }
+    .burger-icon {
+        display: inline-block;
+        position: absolute;
+        top: 29px;
+        right: 30px;
+        font-size: 1.5rem;
+        cursor: pointer;
+    }
+    .navegation > ul {
+        position: fixed;
+        background-color: black;
+        top: 0;
+        padding: 1rem;
+        width: 50%;
+        max-width: 300px;
+        height: 100vh;
+        left: -100%;
+        transition: all .5s ease-in-out;
+    }
+    #burgercheck:checked ~ ul  {
+        left: 0;
+    }
+    .navegation ul .burger-center{
+        padding-left: 1rem;
+    }
+    .navegation ul li > a {
+        color: white;
+    } 
+    .flex-row-2 {
+        flex-direction: column;
+    }
+    .center-nav {
+        display: flex;
+        place-content: center;
+    }
+    .logo-burger {
+        display: inline-block;
+    }
+    .logo-burger-img img {
+        width: 15rem;
+    }
+    .logo-burger-text {
+        font-size: clamp(10px, 3vw, 19px);
+    }
+    .gap5rem {
+        gap: 3rem;
+    }
+    .burger-center {
+        display: flex;
+        justify-content: left;
+        align-items: center;
+    }
+    
     /*-------------- CATEGORIAS --------------*/
     .categorias {
         padding-block: 3rem;
