--- a/servicio/style/merchandising_css.css
+++ b/servicio/style/merchandising_css.css
@@ -88,7 +88,7 @@ header {
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
-    opacity: .3;
+    opacity: .2;
 }
 .mer-div {
     height: 670px;
@@ -141,7 +141,7 @@ header {
     gap: 20px;
 }
 .gapdi-2 {
-    gap: 2.7rem;
+    gap: 2.3rem;
 }
 .grid-column-diseño {
     grid-template-columns: repeat(3, auto);
@@ -167,8 +167,21 @@ header {
     height: 390px;
     border-radius: 15px;
     transition: all .3s ease-in-out;
+    box-shadow: 0px 0px 10px rgb(131, 130, 130);
 }
 .dis-img > img:hover {
+    scale: 1.1;
+}
+.dis-etiqueta {
+    margin-top: 3.5rem;
+}
+.dis-etiqueta img {
+    width: 62rem;
+    border-radius: 15px;
+    transition: all .3s ease-in-out;
+    box-shadow: 0px 0px 10px rgb(131, 130, 130);
+}
+.dis-etiqueta img:hover {
     scale: 1.1;
 }
 
