--- a/css/taproom_css.css
+++ b/css/taproom_css.css
@@ -95,10 +95,12 @@ header {
     height: 800px;
 }
 .taproom-title {
-    font-size: clamp(22px, 3vw, 40px);
+    font-size: clamp(22px, 3vw, 45px);
     text-transform: uppercase;
     color: white;
     padding-inline: .6rem;
+    font-family: 'Bilcase Demo', sans-serif;
+    letter-spacing: 3px;
 }
 .taproom-text {
     font-size: clamp(17px, 3vw, 20px);
@@ -111,9 +113,10 @@ header {
     gap: 40px;
 }
 .taproom-btn button {
+    width: 17rem;
     color: white;
     background-color: #000000;
-    border-radius: 6px;
+    border-radius: 5rem;
     padding-block: .8rem;
     padding-inline: 1.3rem;
     font-size: clamp(15px, 3vw, 18px);
@@ -139,7 +142,7 @@ header {
     text-align: left;
 }
 .taproom-what-text {
-    font-size: clamp(20px, 3vw, 27px);
+    font-size: clamp(20px, 3vw, 25px);
     width: 600px;
     margin-left: 4.4rem;
     text-align: justify;
