--- a/servicio/style/merchandising_css.css
+++ b/servicio/style/merchandising_css.css
@@ -95,7 +95,7 @@ header {
     position: relative;
 }
 .mer-title {
-    font-size: clamp(22px, 3vw, 40px);
+    font-size: clamp(22px, 3vw, 45px);
     text-transform: uppercase;
     color: white;
     padding-inline: .6rem;
@@ -111,9 +111,10 @@ header {
     gap: 40px;
 }
 .mer-button button {
+    width: 17rem;
     color: white;
     background-color: #000000;
-    border-radius: 6px;
+    border-radius: 5rem;
     padding-block: .8rem;
     padding-inline: 1.3rem;
     font-size: clamp(15px, 3vw, 18px);
