--- a/css/producto_css.css
+++ b/css/producto_css.css
@@ -95,18 +95,19 @@ header {
 }
 .ver-producto-img {
     background-color: #efd15a;
-    padding: 5rem;
+    padding: 4rem;
     border-radius: 1rem;
-    min-width: 170px;
+    min-width: 230px;
     max-width: 100%;
-    height: 350px;
+    height: 400px;
 }
 .producto-img {
-    width: 150px;
+    width: 130px;
     height: 350px;
+    object-fit: cover;
 }
 .producto-img-2 {
-    width: 170px;
+    width: 230px;
     height: 350px;
     object-fit: cover;
 }
@@ -753,6 +754,15 @@ footer {
         gap: 1rem;
     }
 
+    .ver-producto-img {
+        background-color: #efd15a;
+        padding: 2rem;
+        border-radius: 1rem;
+        min-width: 230px;
+        max-width: 100%;
+        height: 350px;
+    }
+
      /*-------------- PRODUCTOS --------------*/ 
      .productos {
         padding-block: 3rem;
@@ -890,6 +900,25 @@ footer {
     .ver-producto-column-2 {
         grid-template-columns: repeat(1, auto);
         gap: 1rem;
+    }
+
+    .ver-producto-img {
+        background-color: #efd15a;
+        padding: 2rem;
+        border-radius: 1rem;
+        min-width: 230px;
+        max-width: 100%;
+        height: 370px;
+    }
+    .producto-img {
+        width: 130px;
+        height: 350px;
+        object-fit: cover;
+    }
+    .producto-img-2 {
+        width: 230px;
+        height: 350px;
+        object-fit: cover;
     }
 
     /*-------------- PRODUCTOS --------------*/
@@ -1067,6 +1096,19 @@ footer {
         padding-block: 1.5rem;
         padding-inline: 0;
         gap: 2rem;
+    }
+    .ver-producto-img {
+        padding: 1rem;
+    }
+    .producto-img {
+        width: 120px;
+        height: 300px;
+        object-fit: cover;
+    }
+    .producto-img-2 {
+        width: 210px;
+        height: 320px;
+        object-fit: cover;
     }
 
     /*-------------- PRODUCTOS --------------*/ 
