--- a/servicio/style/merchandising_css.css
+++ b/servicio/style/merchandising_css.css
@@ -84,7 +84,7 @@ header {
     width: 100%;
     height: 800px;
     position: absolute;
-    background: url(../../img/servicios-img/servicio-6.png) no-repeat;
+    background: url(https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680da2f538e0510d01f15c65_servicio-6.png) no-repeat;
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
