--- a/css/producto_css.css
+++ b/css/producto_css.css
@@ -175,11 +175,6 @@ header {
 }
 
 /*-------------- PRODUCTOS -----------------*/
-.productos {
-    padding-block: 5rem;
-    background-image: url(https://cdn.prod.website-files.com/680f81021936b0d565d34173/680f8152de755569d5e8bd02_04dc0f9c210b60f1ba384bea6fb8331d_Fondo-Producto.png);
-    background-size: contain;
-}
 .productos section {
     margin-bottom: 10rem;
 }
@@ -390,11 +385,29 @@ footer {
     color: #fdfbed;
 }
 
+@media (min-width: 1846px) {
+    /*--------------  PRODUCTOS -----------------*/
+    .productos {
+        padding-block: 5rem;
+        background-image: url(https://cdn.prod.website-files.com/680f81021936b0d565d34173/680f8152de755569d5e8bd02_04dc0f9c210b60f1ba384bea6fb8331d_Fondo-Producto.png);
+        background-size: cover;
+    }
+}
+@media (1014px < width < 1845px) {
+    /*--------------  PRODUCTOS -----------------*/
+    .productos {
+        padding-block: 5rem;
+        background-image: url(https://cdn.prod.website-files.com/680f81021936b0d565d34173/680f8152de755569d5e8bd02_04dc0f9c210b60f1ba384bea6fb8331d_Fondo-Producto.png);
+        background-size: contain;
+    }
+}
 @media (min-width: 1013px) {
+    /*--------------  VER PRODUCTOS -----------------*/
     .ver-producto article {
         width: 980px;
     }
 
+    /*--------------  FOOTER -----------------*/
     .my-footer {
         background-color: #6F2601;
         border-radius: 15px;
@@ -479,6 +492,10 @@ footer {
     }
 
     /*-------------- PRODUCTOS --------------*/
+    .productos {
+        background-image: url(https://cdn.prod.website-files.com/680f81021936b0d565d34173/680f8152de755569d5e8bd02_04dc0f9c210b60f1ba384bea6fb8331d_Fondo-Producto.png);
+        background-size: contain;
+    }
     .productos {
         padding-block: 3rem;
     }
@@ -612,6 +629,10 @@ footer {
     }
 
     /*-------------- PRODUCTOS --------------*/
+    .productos {
+        background-image: url(https://cdn.prod.website-files.com/680f81021936b0d565d34173/680f8152de755569d5e8bd02_04dc0f9c210b60f1ba384bea6fb8331d_Fondo-Producto.png);
+        background-size: contain;
+    }
     .productos {
         padding-block: 3rem;
     } 
@@ -763,15 +784,22 @@ footer {
         height: 350px;
     }
 
-     /*-------------- PRODUCTOS --------------*/ 
-     .productos {
+     /*-------------- PRODUCTOS --------------*/
+    .productos {
+        background-image: url(https://cdn.prod.website-files.com/680f81021936b0d565d34173/680f8152de755569d5e8bd02_04dc0f9c210b60f1ba384bea6fb8331d_Fondo-Producto.png);
+        background-size: contain;
+    } 
+    .productos {
         padding-block: 3rem;
     } 
     .productos section {
         margin-bottom: 5.5rem;
     }
     .productos-column-3 {
-        gap: 5.4rem;
+        gap: 4rem;
+    }
+    .text-section {
+        width: 350px;
     }
     .item-producto {
         width: 200px;
@@ -923,32 +951,9 @@ footer {
 
     /*-------------- PRODUCTOS --------------*/
     .productos {
-        padding-block: 3rem;
+        background-image: url(https://cdn.prod.website-files.com/680f81021936b0d565d34173/680f8152de755569d5e8bd02_04dc0f9c210b60f1ba384bea6fb8331d_Fondo-Producto.png);
+        background-size: contain;
     } 
-    .productos section {
-        margin-bottom: 6rem;
-    }
-    .text-section {
-        width: 250px;
-    }
-    .productos-column-3 {
-        gap: 6.2rem;
-    }
-    .img-producto img {
-        width: 100px;
-        height: 250px;
-    }
-    .item-producto {
-        width: 190px;
-        height: 370px;
-        padding: 1.3rem;
-    }
-    .button-producto button {
-        padding: 1rem 1.5rem;
-    }
-
-
-    /*-------------- PRODUCTOS --------------*/ 
     .productos {
         padding-block: 3rem;
     } 
@@ -1112,6 +1117,10 @@ footer {
     }
 
     /*-------------- PRODUCTOS --------------*/ 
+    .productos {
+        background-image: url(https://cdn.prod.website-files.com/680f81021936b0d565d34173/680f8152de755569d5e8bd02_04dc0f9c210b60f1ba384bea6fb8331d_Fondo-Producto.png);
+        background-size: contain;
+    } 
     .productos {
         padding-block: 3rem;
     } 
